--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,7 @@ a, a:visited{
   position: sticky;
   top: 0px;
   z-index: 5;
+  box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 50%);
 }
 #navBar{
   display: flex;
@@ -281,6 +282,7 @@ a, a:visited{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-bottom: 75px;
 }
 #projectBox1::after{
   content: "";
@@ -293,22 +295,54 @@ a, a:visited{
   width: 100%;
 }
 #projectBox2{
+  position: relative;
   color: var(--yellow);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   height: 500px;
+  background-image: url("/images/project2.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 75px;
+}
+#projectBox2::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  opacity: 50%;
+  height: 500px;
+  width: 100%;
 }
 #projectBox3{
+  position: relative;
   color: var(--yellow);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   height: 500px;
+  background-image: url("/images/project3.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 75px;
 }
-#projectTopItem{
+#projectBox3::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  opacity: 50%;
+  height: 500px;
+  width: 100%;
+}
+#projectTopItem1{
   width: 100%;
   justify-content: flex-end;
   align-items: flex-end;
@@ -316,7 +350,43 @@ a, a:visited{
   display: none;
   transition: all .5s;
 }
-#projectBottomItem{
+#projectBottomItem1{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  z-index: 3;
+  display: none;
+  transition: all .5s;
+}
+#projectTopItem2{
+  width: 100%;
+  justify-content: flex-end;
+  align-items: flex-end;
+  z-index: 3;
+  display: none;
+  transition: all .5s;
+}
+#projectBottomItem2{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  z-index: 3;
+  display: none;
+  transition: all .5s;
+}
+#projectTopItem3{
+  width: 100%;
+  justify-content: flex-end;
+  align-items: flex-end;
+  z-index: 3;
+  display: none;
+  transition: all .5s;
+}
+#projectBottomItem3{
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -378,4 +448,20 @@ a, a:visited{
   color: var(--yellow);
   background-color: var(--blue);
   margin-bottom: 50px;
+}
+
+/* NOTE FOOTER CONTENT */
+#footerContainer{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--blue);
+  box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 50%);
+}
+#footerBox{
+  height: 150px;
+  width: 100%;
+  background-color: var(--yellow);
+  clip-path: polygon(0 0, 100% 0, 100% 12%, 5% 100%, 0 100%);
 }
