--- a/styles/style.css
+++ b/styles/style.css
@@ -326,11 +326,12 @@ hr{
   justify-content: center;
   align-items: center;
 }
-#resumeTitleBox{
+#TitleBox{
   padding-top: 10px;
   color: var(--yellow);
   background-color: var(--blue);
   margin-bottom: 10px;
+  box-shadow: 0px 4px 0px black;
 }
 #resumeRow1{
   margin: 10px 0;
@@ -432,6 +433,7 @@ hr{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-top: 37.5px;
   margin-bottom: 37.5px;
 }
 #projectBox1::after{
@@ -605,18 +607,25 @@ hr{
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 #softSkillBox{
-  height: 200px;
-  width: 250px;
   /* outline: 1px solid red; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
+  width: 330px;
+  text-align: center;
 }
 #softSkillImage{
-  height: 120px;
+  height: 180px;
+  margin-bottom: 15px;
+}
+#softSkillBox > p{
+  color: var(--blue);
+  font-size: 14px;
 }
 
 /* NOTE FOOTER CONTENT */
@@ -751,7 +760,7 @@ body{
 }
 #floatingMenu{
   position: absolute;
-  bottom: 90px;
+  bottom: 80px;
   right: 19px;
   background-color: var(--blue);
   display: flex;
