--- a/styles/style.css
+++ b/styles/style.css
@@ -201,6 +201,7 @@ hr{
   background-color: var(--yellow);
   opacity: 0;
   border-radius: 5px;
+  transition-duration: .3s;
 }
 #navItem:hover::before{
   left: 0;
@@ -209,12 +210,12 @@ hr{
   opacity: 1;
   transition-duration: .3s;
 }
-@media (min-width: 1024px){
+@media (min-width: 768px){
   #navBar{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 5px 0;
+    padding: 10px 0;
   }
   #navProfileBox{
     padding: 0;
@@ -242,8 +243,8 @@ hr{
     font-size: 17px;
   }
   #navProfileImage{
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
   }
 }
 
@@ -269,6 +270,11 @@ hr{
   border: 5px solid var(--blue);
   margin: 70px 00;
   box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 50%);
+  transition-duration: .5s;
+}
+#aboutProfileImage:hover{
+  transition-duration: .5s;
+  box-shadow: 0px 5px 55px var(--blue);
 }
 #aboutSkills{
   display: flex;
@@ -331,7 +337,9 @@ hr{
   color: var(--yellow);
   background-color: var(--blue);
   margin-bottom: 10px;
+  margin-top: 50px;
   box-shadow: 0px 4px 0px black;
+  text-shadow: 1px 3px 0px black;
 }
 #resumeRow1{
   margin: 10px 0;
@@ -357,6 +365,7 @@ hr{
   border-radius: 2px;
   text-align: center;
   width: 100%;
+  padding: 2px 0;
 }
 .resumeLabel{
   font-weight: bold;
@@ -433,7 +442,7 @@ hr{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: 37.5px;
+  margin-top: 15px;
   margin-bottom: 37.5px;
 }
 #projectBox1::after{
@@ -605,9 +614,9 @@ hr{
 /* NOTE SOFT SKILLS CONTENT */
 #softSkillsContainer{
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
 }
 #softSkillBox{
   /* outline: 1px solid red; */
@@ -616,7 +625,7 @@ hr{
   justify-content: center;
   align-items: center;
   margin-top: 50px;
-  width: 330px;
+  width: 300px;
   text-align: center;
 }
 #softSkillImage{
